Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -22,6 +22,7 @@
     width: 100%;
     height: 100vh;
     transform: translateZ(-50px) scale(1.5);
+    opacity: 0;
 }
 
 .truck > div {
@@ -61,7 +62,8 @@
     font-weight: 400;
     text-transform: capitalize;
     color: var(--white);
-    visibility: hidden;
+    /*visibility: hidden;*/
+    opacity: 0;
 }
 
 .headers h1,
@@ -104,7 +106,8 @@
     transform: rotate(45deg);
     cursor: pointer;
     z-index: 1;
-    visibility: hidden;
+    /*visibility: hidden;*/
+    opacity: 0;
 }
 
 .road-sign a {
@@ -113,7 +116,9 @@
 }
 
 .phone {
-    visibility: hidden;
+    /*display: none;*/
+    /*visibility: hidden;*/
+    opacity: 0;
 }
 
 .phone h2 {
@@ -149,12 +154,25 @@
     }
 }
 
+@keyframes phoneSlideInAnimation {
+    0% {
+        transform: translateY(100%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
 @keyframes callButtonAppearAnimation {
     0% {
         transform: rotate(665deg) scale(0);
+        opacity: 0;
     }
     100% {
         transform: rotate(45deg) scale(1);
+        opacity: 1;
     }
 }
 
@@ -167,17 +185,6 @@
     }
     100% {
         transform: rotate(45deg) scale(1);
-    }
-}
-
-@keyframes phoneSlideInAnimation {
-    0% {
-        transform: translateY(100%);
-        opacity: 0;
-    }
-    100% {
-        transform: translateY(0);
-        opacity: 1;
     }
 }
 
@@ -233,14 +240,16 @@
 
 @media (min-width: 320px) and (max-height: 576px) {
     .truck {
-        /*display: none;*/
+        display: none;
     }
     .info-panel {
         padding-top: 110px;
     }
     .headers h1,
     .headers h2 {
-        visibility: visible;
+        /*visibility: visible;*/
+        display: block;
+        opacity: 1;
     }
     .call-button a {
         font-size: 1rem;
@@ -248,10 +257,14 @@
     .road-sign {
         height: 100px;
         width: 100px;
-        visibility: visible;
+        /*visibility: visible;*/
+        display: flex;
+        opacity: 1;
     }
     .phone {
-        visibility: visible;
+        /*visibility: visible;*/
+        display: block;
+        opacity: 1;
     }
 }
 
